Added stsci to conda channels for missing packages

--- a/pipeline_environment.yaml
+++ b/pipeline_environment.yaml
@@ -1,5 +1,6 @@
-name: pipeline_test
+name: pipeline
 channels:
+    - stsci
     - pkgw # Peter Williams conda packages for iraf/pyraf & astroquery
 dependencies:
     - python=2.7
